k8s-yaml/ingress/yaml/kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali-ingress
  namespace: istio-system
spec:
  rules:
  - host: traefik.kiali.myk8s.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kiali
          servicePort: 20001
